# AI_Stock

./: README.md  pyproject.toml
error/: webpage_content.html
src/aistock/: __init__.py
test/: openai_test.py  openai_v0.2.py  openai_v0.3.py
