[project]
name = "aistock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "google-generativeai>=0.8.3",
    "numpy>=2.1.2",
    "openai>=1.52.2",
    "requests>=2.32.3",
    "ta-lib",
    "textwrap3>=0.9.2",
    "yfinance>=0.2.46",
]

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.11.0",
    "ruff>=0.7.0",
]

[tool.uv.sources]
ta-lib = { url = "https://github.com/cgohlke/talib-build/releases/download/v0.4.32/TA_Lib-0.4.32-cp312-cp312-win_amd64.whl" }

[project.scripts]
aistock = "aistock:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
